# source

./: README.md
sbi-life-portal-master/sbi-life-portal-master/: .gitignore  README.md  manage.py  pyproject.toml
sbi-life-portal-master/sbi-life-portal-master/audittrail/: admin.py  filters.py  middleware.py  models.py  signals.py  tables.py  urls.py  views.py
sbi-life-portal-master/sbi-life-portal-master/claim_application/: admin.py  apis.py  apps.py  constant.py  filters.py  forms.py  models.py  serializers.py  signals.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py
sbi-life-portal-master/sbi-life-portal-master/glib_sftp/: admin.py  apps.py  filters.py  forms.py  models.py  tables.py  tasks.py  urls.py  views.py
sbi-life-portal-master/sbi-life-portal-master/jstoolchain/: package-lock.json  package.json  tailwind.config.js
sbi-life-portal-master/sbi-life-portal-master/master/: admin.py  constants.py  custom_context_processor.py  filters.py  models.py  signals.py  tables.py  urls.py  utility.py  views.py
sbi-life-portal-master/sbi-life-portal-master/mixins/: models.py  views.py
sbi-life-portal-master/sbi-life-portal-master/prerequisite/: model.pkl
sbi-life-portal-master/sbi-life-portal-master/registration/: adapter.py  admin.py  custom_auth.py  filters.py  models.py  tables.py  urls.py  utils.py  views.py
sbi-life-portal-master/sbi-life-portal-master/sbilife/: asgi.py  celery.py  settings.py  storage_backends.py  urls.py  wsgi.py
sbi-life-portal-master/sbi-life-portal-master/templates/: 403.html  404.html  500.html
(+140 files in other folders)
